@@ -1,11 +1,12 @@
 v0.7.5
 Fixed : premature end of frame when zero-sized raw block, reported by Eric Biggers
+Fixed : legacy mode with ZSTD_HEAPMODE=0, by Christopher Bergqvist
 Modified : minor compression level adaptations
 Update : specification, to v0.1.2 : max huffman depth at 11 bits
 changed : zstd.h moved to /lib directory
 
 v0.7.4
-Added : homebrew for Mac
+Added : homebrew for Mac, by Daniel Cade
 Added : more examples
 Fixed : segfault when using small dictionaries, reported by Felix Handte
 Modified : default compression level for CLI is now 3
